--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -9,3 +9,10 @@ dotenv = "0.15.0"
 serde = { version = "1.0.154", features = ["derive"] }
 sqlx = { version = "0.6.2", features = ["sqlite", "runtime-actix-rustls"] }
 
+[dependencies.uuid]
+version = "1.3.0"
+features = [
+    "v4",                # Lets you generate random UUIDs
+    "fast-rng",          # Use a faster (but still sufficiently random) RNG
+    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
+]
