--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 [dependencies]
 actix-web = "4.3.1"
 dotenv = "0.15.0"
+futures-util = "0.3.27"
 serde = { version = "1.0.154", features = ["derive"] }
 sqlx = { version = "0.6.2", features = ["sqlite", "runtime-actix-rustls"] }
 
